fix(search): overflow search-input fix + stop hiding label when focusing. (closes #412) (#418)
* fix(search): removed fixed height in search-box and search-input

* fix(search): stop hiding label when focusing

* toolbar fix

--- a/src/platform/core/search/search-box/search-box.component.scss
+++ b/src/platform/core/search/search-box/search-box.component.scss
@@ -2,17 +2,11 @@
   display: block;
 }
 .td-search-box {
-  height: 64px;
   td-search-input {
     margin-left: 12px;
     /deep/ [dir='rtl'] & { 
       margin-right: 12px;
       margin-left: 0px !important;
-    }
-    /deep/ {
-      .mat-input-placeholder.mat-focused {
-        visibility: hidden;
-      }
     }
   }
 }
